# AdventOfCode

./: .env  .gitignore  Cargo.toml  README.md  ]  devenv.nix  justfile
.github/workflows/: ci.yaml
benches/: benchmark.rs
crates/aoc_proc_macros/: Cargo.toml
crates/aoc_proc_macros/src/: lib.rs
fun/year2024/: day01.py  day02.pygyat
fun/year2025/: day02.py  day05.py  day09.py  day10.py  day10_testing.py
src/: lib.rs  main.rs
src/util/: integer.rs  iter.rs  mod.rs  parse.rs  point.rs
src/year2023/: day01.rs  day02.rs  day03.rs  day04.rs  day21.rs  day22.rs  mod.rs
src/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs
src/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
src/year2025/simd/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day10.rs
tests/: test.rs
tests/util/: parse.rs  parse_test.rs
tests/year2023/: day01.rs  day01_test.rs  day02_test.rs  day03.rs  day04.rs  day21.rs  day21_test.rs  day22_test.rs
tests/year2024/: day01_test.rs  day02.rs  day02_test.rs  day03.rs  day04.rs  day05.rs  day05_test.rs  day06_test.rs  day07_test.rs  day08_test.rs  day09.rs  day09_test.rs  day10.rs  day10_test.rs  day11_test.rs  day12_test.rs  day13_test.rs  day14_test.rs  day15.rs
tests/year2025/: day01.rs  day01_test.rs  day02_test.rs  day03.rs  day03_test.rs  day04_test.rs  day05.rs  day05_test.rs  day06.rs  day06_test.rs  day07.rs  day07_test.rs  day08_test.rs  day09.rs  day10.rs  day10_test.rs  day11.rs  day12.rs  day12_test.rs
