[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
atoi = "2.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
criterion = { version = "0.7", features = ["real_blackbox"] }
itertools = "0.14.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
num-traits = { version = "0.2", features = ["i128"] }
rayon = "1.11"
rustc-hash = "2.1"
smallvec = "1.15"

[dev-dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
debug-assertions = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
strip = true
debug = false
debug-assertions = false

[profile.profile]
inherits = "release"
debug = true

[profile.profile.package."*"]
inherits = "release"
debug = true

[[bench]]
name = "benchmark"
harness = false

