[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[features]
default = ["simd"]
simd = []

[dependencies]
atoi = "2.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
itertools = "0.14"
ndarray = { version = "0.17", features = ["blas", "rayon", "serde"] }
num = "0.4.3"
num-traits = { version = "0.2", features = ["i128"] }
rayon = "1.11"
rustc-hash = "2.1"
smallvec = "2.0.0-alpha.12"

[dev-dependencies]
criterion = { version = "4.1", package = "codspeed-criterion-compat", features = ["csv_output", "html_reports"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
debug-assertions = false

[profile.profile]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = false
opt-level = 3
strip = false
debug = true
debug-assertions = false

[[bench]]
name = "benchmark"
harness = false

